# calendar_chatbot

./: .gitignore  main.py  pyproject.toml  requirements.txt
backend/: agent.py  calendar_utils.py  config.py  main.py
frontend/: app.py
