[project]
name = "calendar-chatbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "google-api-python-client>=2.175.0",
    "google-auth>=2.40.3",
    "langchain>=0.3.26",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.1",
    "uvicorn>=0.35.0",
]
